--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
                 "doctrine/doctrine-migrations-bundle": "^3.3",
                 "doctrine/orm": "^3.2",
                 "easycorp/easyadmin-bundle": "^4.12",
+                "gedmo/doctrine-extensions": "^3.16",
                 "symfony/console": "7.0.*",
                 "symfony/dotenv": "7.0.*",
                 "symfony/flex": "^2",
