--- a/composer.json
+++ b/composer.json
@@ -1,78 +1,79 @@
 {
-        "name": "symfony/skeleton",
-        "type": "project",
-        "license": "MIT",
-        "description": "A minimal Symfony project recommended to create bare bones applications",
-        "minimum-stability": "stable",
-        "prefer-stable": true,
-        "require": {
-                "php": ">=8.2",
-                "ext-ctype": "*",
-                "ext-iconv": "*",
-                "doctrine/dbal": "^3",
-                "doctrine/doctrine-bundle": "^2.13",
-                "doctrine/doctrine-migrations-bundle": "^3.3",
-                "doctrine/orm": "^3.2",
-                "easycorp/easyadmin-bundle": "^4.12",
-                "stof/doctrine-extensions-bundle": "^1.12",
-                "symfony/console": "7.0.*",
-                "symfony/dotenv": "7.0.*",
-                "symfony/flex": "^2",
-                "symfony/framework-bundle": "7.0.*",
-                "symfony/runtime": "7.0.*",
-                "symfony/yaml": "7.0.*"
+    "name": "symfony/skeleton",
+    "type": "project",
+    "license": "MIT",
+    "description": "A minimal Symfony project recommended to create bare bones applications",
+    "minimum-stability": "stable",
+    "prefer-stable": true,
+    "require": {
+        "php": ">=8.3.12",
+        "ext-ctype": "*",
+        "ext-iconv": "*",
+        "doctrine/dbal": "^3",
+        "doctrine/doctrine-bundle": "^2.13",
+        "doctrine/doctrine-migrations-bundle": "^3.3",
+        "doctrine/orm": "^3.2",
+        "easycorp/easyadmin-bundle": "^4.12",
+        "runtime/frankenphp-symfony": "^0.2.0",
+        "stof/doctrine-extensions-bundle": "^1.12",
+        "symfony/console": "6.4.*",
+        "symfony/dotenv": "6.4.*",
+        "symfony/flex": "^2",
+        "symfony/framework-bundle": "6.4.*",
+        "symfony/runtime": "6.4.*",
+        "symfony/yaml": "6.4.*"
+    },
+    "config": {
+        "allow-plugins": {
+            "php-http/discovery": true,
+            "symfony/flex": true,
+            "symfony/runtime": true
         },
-        "config": {
-                "allow-plugins": {
-                        "php-http/discovery": true,
-                        "symfony/flex": true,
-                        "symfony/runtime": true
-                },
-                "sort-packages": true
-        },
-        "autoload": {
-                "psr-4": {
-                        "App\\": "src/"
-                }
-        },
-        "autoload-dev": {
-                "psr-4": {
-                        "App\\Tests\\": "tests/"
-                }
-        },
-        "replace": {
-                "symfony/polyfill-ctype": "*",
-                "symfony/polyfill-iconv": "*",
-                "symfony/polyfill-php72": "*",
-                "symfony/polyfill-php73": "*",
-                "symfony/polyfill-php74": "*",
-                "symfony/polyfill-php80": "*",
-                "symfony/polyfill-php81": "*",
-                "symfony/polyfill-php82": "*"
-        },
-        "scripts": {
-                "auto-scripts": {
-                        "cache:clear": "symfony-cmd",
-                        "assets:install %PUBLIC_DIR%": "symfony-cmd"
-                },
-                "post-install-cmd": [
-                        "@auto-scripts"
-                ],
-                "post-update-cmd": [
-                        "@auto-scripts"
-                ]
-        },
-        "conflict": {
-                "symfony/symfony": "*"
-        },
-        "extra": {
-                "symfony": {
-                        "allow-contrib": false,
-                        "require": "7.0.*"
-                }
-        },
-        "require-dev": {
-                "doctrine/doctrine-fixtures-bundle": "^3.6",
-                "symfony/maker-bundle": "^1.61"
+        "sort-packages": true
+    },
+    "autoload": {
+        "psr-4": {
+            "App\\": "src/"
         }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "App\\Tests\\": "tests/"
+        }
+    },
+    "replace": {
+        "symfony/polyfill-ctype": "*",
+        "symfony/polyfill-iconv": "*",
+        "symfony/polyfill-php72": "*",
+        "symfony/polyfill-php73": "*",
+        "symfony/polyfill-php74": "*",
+        "symfony/polyfill-php80": "*",
+        "symfony/polyfill-php81": "*"
+    },
+    "scripts": {
+        "auto-scripts": {
+            "cache:clear": "symfony-cmd",
+            "assets:install %PUBLIC_DIR%": "symfony-cmd"
+        },
+        "post-install-cmd": [
+            "@auto-scripts"
+        ],
+        "post-update-cmd": [
+            "@auto-scripts"
+        ]
+    },
+    "conflict": {
+        "symfony/symfony": "*"
+    },
+    "extra": {
+        "symfony": {
+            "allow-contrib": false,
+            "require": "6.4.*",
+            "docker": true
+        }
+    },
+    "require-dev": {
+        "doctrine/doctrine-fixtures-bundle": "^3.6",
+        "symfony/maker-bundle": "^1.61"
+    }
 }
